8238356: CodeHeap::blob_count() overestimates the number of blobs

Decremented _blob_count on addition to the free list

Reviewed-by: lucy, shade, thartmann